# shortlinker

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh.md  ROADMAP.md  TODO.md  TUI_REFACTOR_REPORT.md  build.rs  config.example.toml  docker-compose.yml  links.json  update.sh
.cargo/: audit.toml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  qa.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: admin-panel.yml  audit.yml  docker-image.yml  docs-check.yml  rust-release.yml  rust.yml  vitepress.yml
TODO/: ROADMAP.md  v0.1.7.md
admin-panel/: .yarnrc.yml  README.md  README.zh.md  biome.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
admin-panel/app/: api.ts  page.tsx
admin-panel/components/: LinkForm.tsx  LinkList.tsx
admin-panel/src/components/: AppFooter.vue  AppHeader.vue  HealthModal.vue  LanguageSwitcher.vue  LoginForm.vue
admin-panel/src/composables/: useVersion.ts
admin-panel/src/hooks/: useAnalyticsData.ts  useConfigAction.ts  useConfigHistory.ts  useConfigSchema.ts  useDashboardData.ts  useLinkAnalyticsData.ts  useLinkDetailData.ts  useLinkImport.ts  useLinksBatch.ts  useLoginFlow.ts
admin-panel/src/i18n/: index.ts
admin-panel/src/layouts/: AdminLayout.vue
admin-panel/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LinkDetailPage.tsx  LinksPage.tsx  LoginPage.tsx
admin-panel/src/router/: index.ts
admin-panel/src/services/: analyticsService.ts  api.generated.ts  authService.ts  http.ts  linkService.ts  qrcodeService.ts  systemConfigService.ts  types.generated.ts  types.ts
admin-panel/src/stores/: authStore.ts  healthStore.ts  links.ts  linksStore.ts  systemConfigStore.ts
admin-panel/src/utils/: configUtils.ts  errorMapping.ts
admin-panel/src/views/: AnalyticsView.vue  DashboardView.vue  LinksView.vue  LoginView.vue
benches/: benchmark_local.sh  cache_layer.rs  click_manager.rs  converters.rs  import_conflict.rs  ipc_protocol.rs  object_cache.rs  password.rs  utils.rs
cf-worker/: README.md  README.zh.md  wrangler.toml
cf-worker/src/: lib.rs
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.js
docs/admin-panel/: development.md  index.md  troubleshooting.md
docs/api/: admin-analytics.md  admin-config.md  admin-links.md  admin.md  health-endpoints.md  health-monitoring.md  health.md  index.md
docs/cf-worker/: index.md
docs/cli/: commands.md  index.md  tui.md
docs/config/: examples.md  index.md  runtime.md  security.md  startup.md  storage-backends.md  storage-operations.md  storage-selection.md  storage.md
docs/deployment/: docker-operations.md  docker-quickstart.md  docker.md  index.md  proxy-operations.md  proxy.md  systemd-operations.md  systemd.md
docs/en/: index.md
docs/en/admin-panel/: development.md  index.md  troubleshooting.md
docs/en/api/: admin-analytics.md  admin-config.md  admin-links.md  admin.md  health-endpoints.md  health-monitoring.md  (+2 more)
docs/events/: README.md
docs/guide/: getting-started.md  index.md  installation.md
migration/: Cargo.toml
migration/src/: lib.rs  m020251023_000001_initial_table.rs  m020260111_000001_system_config.rs  m020260112_000001_search_index.rs  m20260202_000001_click_logs.rs  m20260206_000001_click_rollups.rs  m20260206_000002_analytics_indexes.rs  m20260207_000001_user_agents_table.rs  m20260207_000002_user_agents_parsed.rs  m20260208_000001_utm_source.rs  m20260208_000002_drop_user_agent.rs  m20260209_000001_source_geo_indexes.rs  m20260209_000002_analytics_indexes_v2.rs  m20260209_000003_global_daily_rollup.rs  m20260721_000001_forge_system_config.rs
shortlinker-worker/: Cargo.toml
shortlinker-worker/src/: lib.rs
src/: admin.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  metrics_core.rs  metrics_macros.rs  reload.rs  signal.rs  storage.rs  structs.rs  utils.rs
src/analytics/: global.rs  hourly_writer.rs  manager.rs  mod.rs  retention.rs  rollup.rs  sink.rs
src/api/: constants.rs  jwt.rs  mod.rs  openapi.rs
src/cache/: composite.rs  layered.rs  macros.rs  mod.rs  null_composite.rs  register.rs  traits.rs
src/cli/: mod.rs  parser.rs  process_manager.rs
src/client/: config_client.rs  context.rs  link_client.rs  mod.rs  system_client.rs
src/config/: args.rs  config_migration.rs  definitions.rs  impl.rs  mod.rs  runtime_config.rs  schema.rs  structs.rs  types.rs  validators.rs
src/interfaces/: mod.rs
src/metrics/: mod.rs  registry.rs  system.rs  traits.rs
src/middleware/: auth.rs  frontend.rs  health.rs  mod.rs
src/repository/: macros.rs  mod.rs  register.rs
src/runtime/: assembly.rs  components.rs  mod.rs  startup.rs  tasks.rs
src/services/: admin.rs  analytics_service.rs  config_service.rs  frontend.rs  health.rs  import_validation.rs  link_cache.rs  link_service.rs  mod.rs  redirect.rs  user_agent_store.rs
src/storage/: config_store.rs  mod.rs  models.rs
src/storages/: file.rs  macros.rs  mod.rs  models.rs  redis.rs  register.rs  sled.rs  sqlite.rs
src/system/: args.rs  lockfile.rs  logging.rs  mod.rs  panic_handler.rs  reload.rs  shutdown.rs  signal.rs
src/tui/: app.rs  event_handler.rs  mod.rs  ui.rs
src/utils/: colors.rs  csv_handler.rs  ip.rs  mod.rs  password.rs  time_parser.rs  url_validator.rs
tests/: README.md  admin_api_extended_tests.rs  admin_api_tests.rs  analytics_service_tests.rs  analytics_tests.rs  auth_export_import_tests.rs  benchmarks.rs  cli_tests.rs  cli_tests.rs.disabled  client_tests.rs  config_store_tests.rs  cors_tests.rs  errors_tests.rs  generate_openapi.rs  integration_tests.rs  ipc_handler_tests.rs  ipc_integration_tests.rs  link_service_tests.rs  metrics_tests.rs  middleware_tests.rs  middleware_tests.rs.disabled  performance_tests.rs  redirect_tests.rs  services_tests.rs  services_tests.rs.disabled  storage_tests.rs  storages_tests.rs  storages_tests.rs.disabled  system_config_migration_tests.rs  system_tests.rs  utils_tests.rs
(+286 files in other folders)
