[package]
name = "shortlinker"
version = "0.3.0-alpha.5"
description = "A minimalist URL shortener service supporting HTTP 307 redirection, built with Rust. Easy to deploy and lightning fast."
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2024"

[features]
default = ["server", "cli"]  # 默认启用服务器和CLI功能
server = []           # 服务器功能（核心）
cli = ["server"]      # CLI功能（依赖服务器）
tui = ["server", "dep:color-eyre", "dep:crossterm", "dep:ratatui"]      # TUI功能（依赖服务器）
full = ["server", "cli", "tui"]  # 全功能版本

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

# 添加库配置
[lib]
name = "shortlinker"
path = "src/lib.rs"

# 二进制配置
[[bin]]
name = "shortlinker"
path = "src/main.rs"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
actix-web = { version = "4.12", features = ["compress-brotli", "compress-gzip"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1.89"
futures = "0.3.31"
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44", default-features = false }
dashmap = "6.1.0"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2.4"
moka = { version = "0.12.12", default-features = false, features = ["future", "sync"] }
colored = "3.0.0"
num_cpus = { version = "1.17.0", default-features = false }
bloomfilter = "3.0.1"
actix-service = "2.0.3"
futures-util = "0.3.31"
once_cell = "1.21.3"
ctor = "0.6"
tracing-attributes = "0.1.31"
anyhow = { version = "1.0.100", features = ["backtrace"] }
rust-embed = "8.9.0"
uuid = { version = "1.19", features = ["v4"] }
redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp"] }
rustls = "0.23.36"
toml = "0.9"
color-eyre = { version = "0.6.5", optional = true }
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", optional = true }
sea-orm = { version = "2.0.0-rc.28", default-features = false, features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls", "chrono"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
arc-swap = "1"
parking_lot = "0.12"
argon2 = "0.5"
url = "2"
actix-cors = "0.7"
ts-rs = { version = "11.1", features = ["chrono-impl"] }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4", default-features = false, features = ["iterator"] }
nix = { version = "0.30", default-features = false, features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "namedpipeapi", "winbase", "winnt", "winerror", "errhandlingapi"] }

[dev-dependencies]
tokio-test = "0.4"
actix-rt = "2.11"
tempfile = "3.24"
tokio = { version = "1.49.0", features = ["full"] }
